hacky fix webkit overflow scroll

--- a/app/styles/layout.styl
+++ b/app/styles/layout.styl
@@ -31,7 +31,8 @@
       -moz-animation: 0.5s slideInLeft;
       -o-animation: 0.5s slideInLeft;
       animation: 0.5s slideInLeft;
-      -webkit-overflow-scrolling touch
+      -webkit-overflow-scrolling auto !important
+      overflow hidden !important
 
 @media $screen-tablet-media-q
   .header
